{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 95,
  "lineage": "9c86eca4-b12c-7485-4a96-09e93f193618",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastian_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8e758f5e873d1c1",
            "arn": "arn:aws:ec2:eu-west-1:468808910871:instance/i-0a4b397c2fbad9580",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4b397c2fbad9580",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "AWSKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0ba0f35fdbe336a7f"
              }
            ],
            "primary_network_interface_id": "eni-0ba0f35fdbe336a7f",
            "private_dns": "ip-15-0-1-51.eu-west-1.compute.internal",
            "private_ip": "15.0.1.51",
            "public_ip": "54.220.221.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013fae1a4b5c234bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b1c7727258e92d6",
            "tags": {
              "Name": "bastain"
            },
            "tags_all": {
              "Name": "bastain"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f60909810bd5ba1"
            ]
          },
          "dependencies": [
            "module.subnets.aws_network_interface.bastian-nic",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8e758f5e873d1c1",
            "arn": "arn:aws:ec2:eu-west-1:468808910871:instance/i-04212a8ee6391eb85",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04212a8ee6391eb85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "AWSKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-007c6f2b6e09188aa"
              }
            ],
            "primary_network_interface_id": "eni-007c6f2b6e09188aa",
            "private_dns": "ip-15-0-1-50.eu-west-1.compute.internal",
            "private_ip": "15.0.1.50",
            "public_ip": "54.76.136.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02da2205df18191ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b1c7727258e92d6",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038673f10d10b5a89",
              "sg-05d6a95a420e28c2b",
              "sg-05ef8db6af5d5c816"
            ]
          },
          "dependencies": [
            "module.subnets.aws_network_interface.jenkins-nic",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_security_group.allow_internal_ssh",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_security_group.allow_web",
            "module.vpc.aws_security_group.jenkins",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8e758f5e873d1c1",
            "arn": "arn:aws:ec2:eu-west-1:468808910871:instance/i-0627e31c597c4ce3d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0627e31c597c4ce3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d360943d50abaffd"
              }
            ],
            "primary_network_interface_id": "eni-0d360943d50abaffd",
            "private_dns": "ip-15-0-2-50.eu-west-1.compute.internal",
            "private_ip": "15.0.2.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b7a08b0817b7e148",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc6c662010dcde4d",
            "tags": {
              "Name": "manager"
            },
            "tags_all": {
              "Name": "manager"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04edfc4a2f0b145b9",
              "sg-05ef8db6af5d5c816",
              "sg-07dfaa45819eb16bd",
              "sg-089e963be329941a7"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_docker_swarm",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.prod-vpc",
            "module.subnets.aws_subnet.subnet-private",
            "module.vpc.aws_security_group.allow_internal_ssh",
            "module.vpc.aws_security_group.allow_jenkins_to_manager_ssh",
            "module.vpc.aws_security_group.application_ports",
            "module.vpc.aws_security_group.jenkins",
            "module.subnets.aws_network_interface.manager-nic"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_bastian",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "15.0.1.51",
            "association_id": "eipassoc-0440b6d74f019dc1f",
            "domain": "vpc",
            "id": "eipalloc-0ec86bfec2338f39e",
            "instance": "i-0a4b397c2fbad9580",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ba0f35fdbe336a7f",
            "private_dns": "ip-15-0-1-51.eu-west-1.compute.internal",
            "private_ip": "15.0.1.51",
            "public_dns": "ec2-54-220-221-251.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.221.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_network_interface.bastian-nic",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08519cc41c0cbb09c",
            "domain": "vpc",
            "id": "eipalloc-02ca16fe68d0bb2d8",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0189de18d418d6616",
            "private_dns": "ip-15-0-1-253.eu-west-1.compute.internal",
            "private_ip": "15.0.1.253",
            "public_dns": "ec2-63-35-112-98.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.112.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "15.0.1.50",
            "association_id": "eipassoc-026d80c36f2d99777",
            "domain": "vpc",
            "id": "eipalloc-05d1baca16b05ef3e",
            "instance": "i-04212a8ee6391eb85",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-007c6f2b6e09188aa",
            "private_dns": "ip-15-0-1-50.eu-west-1.compute.internal",
            "private_ip": "15.0.1.50",
            "public_dns": "ec2-54-76-136-203.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.76.136.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_web",
            "module.vpc.aws_security_group.jenkins",
            "module.vpc.aws_vpc.prod-vpc",
            "module.subnets.aws_network_interface.jenkins-nic",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_security_group.allow_internal_ssh",
            "module.vpc.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ca16fe68d0bb2d8",
            "connectivity_type": "public",
            "id": "nat-091671f5f71c3fe69",
            "network_interface_id": "eni-0189de18d418d6616",
            "private_ip": "15.0.1.253",
            "public_ip": "63.35.112.98",
            "subnet_id": "subnet-09b1c7727258e92d6"
          },
          "dependencies": [
            "module.subnets.aws_eip.eip_nat_gateway",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bastian-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0ffee0da16bcfcf5a",
                "device_index": 0,
                "instance": "i-0a4b397c2fbad9580"
              }
            ],
            "id": "eni-0ba0f35fdbe336a7f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0a:18:6d:82:95:ab",
            "private_ip": "15.0.1.51",
            "private_ips": [
              "15.0.1.51"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05f60909810bd5ba1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b1c7727258e92d6"
          },
          "dependencies": [
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0ae8e7619a9458367",
                "device_index": 0,
                "instance": "i-04212a8ee6391eb85"
              }
            ],
            "id": "eni-007c6f2b6e09188aa",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0a:34:5f:60:d8:5b",
            "private_ip": "15.0.1.50",
            "private_ips": [
              "15.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-038673f10d10b5a89",
              "sg-05d6a95a420e28c2b",
              "sg-05ef8db6af5d5c816"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b1c7727258e92d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_security_group.allow_internal_ssh",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_security_group.allow_web",
            "module.vpc.aws_security_group.jenkins"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "manager-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-04c927711823e6da5",
                "device_index": 0,
                "instance": "i-0627e31c597c4ce3d"
              }
            ],
            "id": "eni-0d360943d50abaffd",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:af:33:0e:29:37",
            "private_ip": "15.0.2.50",
            "private_ips": [
              "15.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04edfc4a2f0b145b9",
              "sg-05ef8db6af5d5c816",
              "sg-07dfaa45819eb16bd",
              "sg-089e963be329941a7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc6c662010dcde4d"
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_jenkins_to_manager_ssh",
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_security_group.application_ports",
            "module.vpc.aws_security_group.jenkins",
            "module.vpc.aws_vpc.prod-vpc",
            "module.subnets.aws_subnet.subnet-private",
            "module.vpc.aws_security_group.allow_docker_swarm",
            "module.vpc.aws_security_group.allow_internal_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137db112c1186010",
            "route_table_id": "rtb-0288b2a44e6b5fe9d",
            "subnet_id": "subnet-09b1c7727258e92d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fee4820b0eb8ea41",
            "route_table_id": "rtb-04031feff9aa90780",
            "subnet_id": "subnet-0fc6c662010dcde4d"
          },
          "dependencies": [
            "module.subnets.aws_nat_gateway.nat",
            "module.subnets.aws_subnet.subnet-private",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_vpc.prod-vpc",
            "module.subnets.aws_eip.eip_nat_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:subnet/subnet-0fc6c662010dcde4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "15.0.2.0/24",
            "id": "subnet-0fc6c662010dcde4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468808910871",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:subnet/subnet-09b1c7727258e92d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "15.0.1.0/24",
            "id": "subnet-09b1c7727258e92d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468808910871",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:internet-gateway/igw-04ef831ed5190d20c",
            "id": "igw-04ef831ed5190d20c",
            "owner_id": "468808910871",
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:route-table/rtb-04031feff9aa90780",
            "id": "rtb-04031feff9aa90780",
            "owner_id": "468808910871",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091671f5f71c3fe69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.eip_nat_gateway",
            "module.subnets.aws_nat_gateway.nat",
            "module.subnets.aws_subnet.subnet-public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:route-table/rtb-0288b2a44e6b5fe9d",
            "id": "rtb-0288b2a44e6b5fe9d",
            "owner_id": "468808910871",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ef831ed5190d20c",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ef831ed5190d20c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_docker_swarm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-07dfaa45819eb16bd",
            "description": "Allow docker swarm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dfaa45819eb16bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.0.2.0/24"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "15.0.2.0/24"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "15.0.2.0/24"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "15.0.2.0/24"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              }
            ],
            "name": "docker_swarm_ports",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_internal_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-05ef8db6af5d5c816",
            "description": "Allow ssh from bastian traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ef8db6af5d5c816",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f60909810bd5ba1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_internal_ssh",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_jenkins_to_manager_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-089e963be329941a7",
            "description": "Allow ssh from jenkins node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089e963be329941a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038673f10d10b5a89"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_jenkins_to_manager_ssh",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.jenkins",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-05f60909810bd5ba1",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f60909810bd5ba1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-05d6a95a420e28c2b",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d6a95a420e28c2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-04edfc4a2f0b145b9",
            "description": "Opens the ports for the application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04edfc4a2f0b145b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "15.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "application_ports",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:security-group/sg-038673f10d10b5a89",
            "description": "Allow traffic to jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038673f10d10b5a89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "468808910871",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9a7c12efed8d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:468808910871:vpc/vpc-0dd9a7c12efed8d03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "15.0.0.0/16",
            "default_network_acl_id": "acl-0c3f83c440b7e7079",
            "default_route_table_id": "rtb-09a0ffad2430c5e3c",
            "default_security_group_id": "sg-01b1f5358b6c47c54",
            "dhcp_options_id": "dopt-8667f6e0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dd9a7c12efed8d03",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a0ffad2430c5e3c",
            "owner_id": "468808910871"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}